fixed footer and contact page spacing issues in home and mobile landing page

--- a/laab/src/contact.css
+++ b/laab/src/contact.css
@@ -6,7 +6,7 @@
   background-color: #cad1df;
   position: relative;
   min-height: 100vh;
-  margin-top: 90rem;
+  margin-top: 55rem;
   left: -70px;
 }
 
@@ -158,9 +158,14 @@
 @media (max-width: 768px) {
   .contact-container {
     flex-direction: column;
-    top: -1550px;
+    top: -120px;
     width:140%;
     left: -50px;
+     margin-top: 0rem;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    position: relative  ;
+    
   }
 
   #contact-title {
@@ -179,4 +184,5 @@
   .contact-right {
     min-width: 100%;
   }
+
 }
