--- a/laab/src/index.css
+++ b/laab/src/index.css
@@ -475,7 +475,16 @@ html, body {
     overflow-x: hidden !important;
     width: 100vw;
     position: relative;
+    margin: 0;
+    padding: 0;
   }
+
+    body {
+    position: relative;
+    height: 100vh;
+    overflow-y: auto;
+  }
+  
 
   * {
     max-width: 100vw;
@@ -591,5 +600,8 @@ margin-left: -80px;
   height: auto;
 }
 
+.app-container {
+  min-height: 100vh;
+}
 
-  }
+}
